# datatools

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  clean.sh  init.sh  tests.cmake
cmake/: datatoolsConfig.cmake.in
export/datatools/: allocator.hpp  array.hpp  mapfile.hpp  version.hpp
src/datatools/: MemoryMapped.cpp  allocator.cpp  mapfile.cpp  version.cpp
tests/: CMakeLists.txt  defs.h  driver.c  exports.cpp
tests/install/: CMakeLists.txt  test.sh
